--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,24 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+       https://firebase.google.com/docs/web/setup#available-libraries -->
+
+  <script>
+  var firebaseConfig = {
+    apiKey: "AIzaSyD5Q2w7sUOaPenxkA8eHGG7lSLJSDzOx74",
+    authDomain: "flutteriot5.firebaseapp.com",
+    projectId: "flutteriot5",
+    storageBucket: "flutteriot5.appspot.com",
+    messagingSenderId: "177797657030",
+    appId: "1:177797657030:web:1fc475ca5dfe22e94d02c7"
+  };
+  firebase.initializeApp(firebaseConfig);
+</script>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
